@@ -78,7 +78,12 @@ typedef struct {
         gpointer data2;
 } TrackerDBusData;
 
-gboolean         tracker_dbus_init                       (Tracker *tracker);
+gboolean         tracker_dbus_preinit                    (Tracker *tracker, 
+							  DBusGConnection **connection_out, 
+							  DBusGProxy **proxy_out);
+gboolean         tracker_dbus_init                       (Tracker *tracker,
+							  DBusGConnection *connection, 
+							  DBusGProxy *proxy);
 void             tracker_dbus_shutdown                   (void);
 guint            tracker_dbus_get_next_request_id        (void);
 GObject *        tracker_dbus_get_object                 (GType                type);
